// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--responsive"
  data-test-subj="test subject string"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
  >
    <span>
      Animals
    </span>
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb"
    href="#"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--responsive"
>
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    …
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 2 items 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    …
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 3 items 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    …
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props truncate is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;
